--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,20 @@
+#mysql
+#spring.datasource.url= jdbc:mysql://192.168.0.103:3306/parcaodb?useSSL=false
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 
-spring.datasource.url= jdbc:mysql://localhost:3306/parcaodb?useSSL=false
+#mariadb
+spring.datasource.url=jdbc:mariadb://192.168.0.103:3306/parcaodb?useSSL=false
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB53Dialect
+
 spring.datasource.username= root
-spring.datasource.password= rootc8w3l5
-
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.password= root
 spring.jpa.hibernate.ddl-auto= update
-server.port=8081
+server.port=3030
+spring.jpa.open-in-view=true
+spring.jpa.hibernate.jdbc.lob.non_contextual_creation=true
+
 
 # App Properties
 bezkoder.app.jwtCookieName= bezkoder
