--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 #spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 
 #mariadb
-spring.datasource.url=jdbc:mariadb://192.168.0.103:3306/parcaodb?useSSL=false
+spring.datasource.url=jdbc:mariadb://192.168.0.105:3306/parcaodb?useSSL=false
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB53Dialect
 
@@ -15,8 +15,16 @@ server.port=3030
 spring.jpa.open-in-view=true
 spring.jpa.hibernate.jdbc.lob.non_contextual_creation=true
 
+logging.level.org.hibernate.SQL=debug
 
 # App Properties
-bezkoder.app.jwtCookieName= bezkoder
-bezkoder.app.jwtSecret= bezKoderSecretKey
-bezkoder.app.jwtExpirationMs= 86400000
+parcao.app.jwtCookieName= luismarcelo
+parcao.app.jwtSecret= luismarceloSecretKey
+parcao.app.jwtExpirationMs= 86400000
+
+#Mensagens de Retorno
+parcao.app.cargo.inexistente= Cargo inexistente
+parcao.app.usuario.cadastrado= Usuario cadastrado com sucesso
+parcao.app.usuario.desconectado= Desconectado com sucesso
+parcao.app.usuario.atualizado= Senha atualizada com sucesso
+parcao.app.usuario.inexistente= Usuarionao encontrado
