--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,4 +27,5 @@ parcao.app.cargo.inexistente= Cargo inexistente
 parcao.app.usuario.cadastrado= Usuario cadastrado com sucesso
 parcao.app.usuario.desconectado= Desconectado com sucesso
 parcao.app.usuario.atualizado= Senha atualizada com sucesso
-parcao.app.usuario.inexistente= Usuarionao encontrado
+parcao.app.usuario.inexistente= Usuario nao encontrado
+parcao.app.usuario.senha.incorreta= Senha antiga incorreta
