Ajustes retorno de requisições e alteração de classe

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 #spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 
 #mariadb
-spring.datasource.url=jdbc:mariadb://192.168.0.107:3306/parcaodb?useSSL=false
+spring.datasource.url=jdbc:mariadb://192.168.0.109:3306/parcaodb?useSSL=false
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB53Dialect
 
@@ -23,9 +23,7 @@ parcao.app.jwtSecret= luismarceloSecretKey
 parcao.app.jwtExpirationMs= 86400000
 
 #Mensagens de Retorno
-parcao.app.cargo.inexistente= Cargo inexistente
-parcao.app.usuario.cadastrado= Usuario cadastrado com sucesso
-parcao.app.usuario.desconectado= Desconectado com sucesso
-parcao.app.usuario.atualizado= Senha atualizada com sucesso
-parcao.app.usuario.inexistente= Usuario nao encontrado
-parcao.app.usuario.senha.incorreta= Senha antiga incorreta
+parcao.app.retorno.success= SUCCESS
+parcao.app.retorno.error= ERROR
+parcao.app.retorno.record_already_exists= EXISTS
+parcao.app.retorno.record_not_exists= NOT EXISTS
