Ajustes retorno de requisições e alteração de classe

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,5 +25,9 @@ parcao.app.jwtExpirationMs= 86400000
 #Mensagens de Retorno
 parcao.app.retorno.success= SUCCESS
 parcao.app.retorno.error= ERROR
-parcao.app.retorno.record_already_exists= EXISTS
-parcao.app.retorno.record_not_exists= NOT EXISTS
+parcao.app.retorno.role_not_exists= ROLE_NOT_EXISTS
+parcao.app.retorno.user_already_exists= USER_EXISTS
+parcao.app.retorno.email_already_exists= EMAIL_EXISTS
+parcao.app.retorno.user_not_exists= USER_NOT_EXISTS
+parcao.app.retorno.email_not_exists= EMAIL_NOT EXISTS
+parcao.app.retorno.new_password_incorrect= NEW_PASSWORD_INCORRECT
