--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.jpa.hibernate.ddl-auto= update
 server.port=3030
 spring.jpa.open-in-view=true
 spring.jpa.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.org.hibernate.SQL=debug
 
@@ -28,6 +30,7 @@ parcao.app.retorno.error= ERROR
 parcao.app.retorno.role_not_exists= ROLE_NOT_EXISTS
 parcao.app.retorno.user_already_exists= USER_EXISTS
 parcao.app.retorno.email_already_exists= EMAIL_EXISTS
+parcao.app.retorno.email_invalid= EMAIL_INVALID
 parcao.app.retorno.user_not_exists= USER_NOT_EXISTS
 parcao.app.retorno.email_not_exists= EMAIL_NOT EXISTS
 parcao.app.retorno.new_password_incorrect= NEW_PASSWORD_INCORRECT
