Corrigido update de usuario
Update de funcionario nao estava funcionando

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@
 #postgres-local
 #spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 #spring.datasource.url=jdbc:postgresql://192.168.0.109:5432/parcaodb?ssl=true&sslmode=require
+#spring.datasource.username= mar0580
+#spring.datasource.password= root
+
 
 #postgres-Heroku
 spring.datasource.url= jdbc:postgresql://ec2-44-197-128-108.compute-1.amazonaws.com:5432/d3tvnq5kubr9ak
@@ -18,7 +21,8 @@ spring.datasource.password= 61f4178c38749f1420fd4699ce6f4b9cb75ef2ff36ecf05c5b30
 #spring.datasource.url=jdbc:mariadb://192.168.0.109:3306/parcaodb?useSSL=false
 #spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB53Dialect
-#spring.datasource.username= mar0580
+#spring.datasource.username= root
+#spring.datasource.password= root
 
 spring.jpa.hibernate.ddl-auto= update
 server.port=3030
