--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 			<optional>true</optional>
 		</dependency>
 
-		<!--<dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
@@ -50,7 +50,7 @@
 			<artifactId>mariadb-java-client</artifactId>
 			<version>3.0.7</version>
 		</dependency>
-		-->
+
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
