--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.datasource.password= root
 #spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB53Dialect
 #spring.datasource.username= root
-#spring.datasource.password= root
+#pring.datasource.password= root
 
 spring.jpa.hibernate.ddl-auto= update
 server.port=3030
