Implementa envio de email e correção na atualização de produtos em estoque na filial onde ocorreu a venda

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,13 +37,14 @@ parcao.app.jwtCookieName= luismarcelo
 parcao.app.jwtSecret= luismarceloSecretKey
 parcao.app.jwtExpirationMs= 86400000
 
-#Mensagens de Retorno
-parcao.app.retorno.success= SUCCESS
-parcao.app.retorno.error= ERROR
-parcao.app.retorno.role_not_exists= ROLE_NOT_EXISTS
-parcao.app.retorno.user_already_exists= USER_EXISTS
-parcao.app.retorno.email_already_exists= EMAIL_EXISTS
-parcao.app.retorno.email_invalid= EMAIL_INVALID
-parcao.app.retorno.user_not_exists= USER_NOT_EXISTS
-parcao.app.retorno.email_not_exists= EMAIL_NOT EXISTS
-parcao.app.retorno.password_incorrect= PASSWORD_INCORRECT
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=lmarcelossantos@gmail.com 
+spring.mail.password=mxauduehfmmoeoka
+spring.mail.recipient.dev=mar0580@gmail.com
+spring.mail.recipient.user=mar0580@hotmail.com
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
