Implementações de ControleDiario

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,14 +37,14 @@ parcao.app.jwtCookieName= luismarcelo
 parcao.app.jwtSecret= luismarceloSecretKey
 parcao.app.jwtExpirationMs= 86400000
 
-spring.mail.host=smtp.gmail.com
+spring.mail.host=outlook.office365.com
 spring.mail.port=587
-spring.mail.username=lmarcelossantos@gmail.com 
-spring.mail.password=azfqlqlhmeyzwmvu
-spring.mail.recipient.dev=mar0580@gmail.com
-spring.mail.recipient.user=mar0580@hotmail.com
+spring.mail.username=mar0580@hotmail.com
+spring.mail.password=#Homega10
+spring.mail.recipient.dev=lmsistemas@bol.com.br
+spring.mail.recipient.user=lmsistemas@bol.com.br
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
+#spring.mail.properties.mail.smtp.connectiontimeout=5000
+#spring.mail.properties.mail.smtp.timeout=5000
+#spring.mail.properties.mail.smtp.writetimeout=5000
