--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@
 
 #postgres-local
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://2ab3-45-166-180-214.sa.ngrok.io:5432/parcaodb?ssl=true&sslmode=require
-spring.datasource.username=
-spring.datasource.password= 
+spring.datasource.url=jdbc:postgresql://192.168.0.104:5432/parcaodb?ssl=true&sslmode=require
+spring.datasource.username= mar0580
+spring.datasource.password= root
 
 #postgres-Heroku
 #spring.datasource.url= jdbc:postgresql://ec2-44-197-128-108.compute-1.amazonaws.com:5432/d3tvnq5kubr9ak
@@ -21,8 +21,8 @@ spring.datasource.password=
 #spring.datasource.url=jdbc:mariadb://192.168.31.99:3306/parcaodb?useSSL=false
 #spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB53Dialect
-#spring.datasource.username=
-#pring.datasource.password=
+#spring.datasource.username= root
+#pring.datasource.password= root
 
 spring.jpa.hibernate.ddl-auto= update
 server.port=3030
@@ -32,6 +32,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=debug
 
+spring.main.allow-circular-references=true
+
 #App Properties
 parcao.app.jwtCookieName= luismarcelo
 parcao.app.jwtSecret= luismarceloSecretKey
@@ -39,10 +41,10 @@ parcao.app.jwtExpirationMs= 86400000
 
 spring.mail.host=outlook.office365.com
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password= 
+spring.mail.username= mar0580@hotmail.com
+spring.mail.password= #MilHouse
 spring.mail.recipient.dev=lmsistemas@bol.com.br
-spring.mail.recipient.user=lmsistemas@bol.com.br
+spring.mail.recipient.user=cocodoparcao@gmail.com
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.mail.properties.mail.smtp.connectiontimeout=5000
